assets/ms_divider.css
.ms-divider {
  position: relative;
  width: 100%;
  overflow: hidden;
  line-height: 0;
}

.ms-divider__svg {
  position: relative;
  display: block;
  width: 100%;
}

.ms-divider__svg svg {
  display: block;
  width: 100%;
  height: var(--ms-divider-height, 80px);
}

.ms-divider--flip-x .ms-divider__svg svg {
  transform: scaleX(-1);
}

.ms-divider--flip-y .ms-divider__svg svg {
  transform: scaleY(-1);
}

.ms-divider--flip-x.ms-divider--flip-y .ms-divider__svg svg {
  transform: scale(-1, -1);
}

@media (max-width: 749px) {
  .ms-divider__svg svg {
    height: var(--ms-divider-height-mobile, var(--ms-divider-height, 50px));
  }
}

.ms-divider__line {
  width: 100%;
  border: none;
  margin: 0;
}

div.ms-divider__line {
  border: none;
}

.ms-divider__line--scheme {
  background: var(--gradient-background);
  background-attachment: local;
}

.ms-divider__scheme-mask {
  width: 100%;
  height: var(--ms-divider-height, 80px);
  -webkit-mask-size: 100% 100%;
  mask-size: 100% 100%;
  -webkit-mask-repeat: no-repeat;
  mask-repeat: no-repeat;
  background-attachment: local;
}

.ms-divider--flip-x .ms-divider__scheme-mask {
  transform: scaleX(-1);
}

.ms-divider--flip-y .ms-divider__scheme-mask {
  transform: scaleY(-1);
}

.ms-divider--flip-x.ms-divider--flip-y .ms-divider__scheme-mask {
  transform: scale(-1, -1);
}

@media (max-width: 749px) {
  .ms-divider__scheme-mask {
    height: var(--ms-divider-height-mobile, var(--ms-divider-height, 50px));
  }
}

